--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_add_favourite">Add to favourites</string>
     <string name="action_delete">Remove</string>
-    <string name="backdrop_title">Loyalty Cards</string>
     <string name="backdrop_subtitle">All your Loyalty cards in one place</string>
 
     <string name="title_activity_login">LoginActivity</string>
@@ -19,4 +18,9 @@
     <string name="login">Login</string>
     <string name="no_login">No Account? Sign up here</string>
     <string name="signUp">Sign Up</string>
+
+    <string name="title_activity_profile">ProfileActivity</string>
+
+    <string name="profileHeading">Update your Profile</string>
+    <string name="title_activity_barcode">BarcodeActivity</string>
 </resources>
